--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -72,7 +72,7 @@ button:hover {
     justify-content: center;
     text-align: center;
     flex-direction: column;
-    background-image: linear-gradient( 0deg, rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.45)), url('/src/public/img/img_honolulu.png');
+    background-image: linear-gradient( 0deg, rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.45)), url('../img/img_honolulu.png');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
@@ -321,7 +321,7 @@ footer a:hover {
     align-items: center;
     justify-content: center;
     flex-direction: row;
-    background-image: linear-gradient( 0deg, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('/src/public/img/img_honolulu.png');
+    background-image: linear-gradient( 0deg, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('../img/img_honolulu.png');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
@@ -672,7 +672,7 @@ footer a:hover {
     border-radius: 40px 40px 0px 0px;
     margin: 0;
     display: flex;
-    background-image: linear-gradient( 0deg, rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.45)), url('/src/public/img/puerto_iguazu.jpg');
+    background-image: linear-gradient( 0deg, rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.45)), url('../img/puerto_iguazu.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
@@ -683,7 +683,7 @@ footer a:hover {
     border-radius: 40px 40px 0px 0px;
     margin: 0;
     display: flex;
-    background-image: linear-gradient( 0deg, rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.45)), url('/src/public/img/bariloche.jpg');
+    background-image: linear-gradient( 0deg, rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.45)), url('../img/bariloche.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
@@ -694,7 +694,7 @@ footer a:hover {
     border-radius: 40px 40px 0px 0px;
     margin: 0;
     display: flex;
-    background-image: linear-gradient( 0deg, rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.45)), url('/src/public/img/salta.jpg');
+    background-image: linear-gradient( 0deg, rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.45)), url('../img/salta.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
@@ -779,7 +779,7 @@ footer a:hover {
     border-radius: 40px 40px 0px 0px;
     margin: 0;
     display: flex;
-    background-image: linear-gradient( 0deg, rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.45)), url('/src/public/img/florianopolis.jpg');
+    background-image: linear-gradient( 0deg, rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.45)), url('../img/florianopolis.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
@@ -790,7 +790,7 @@ footer a:hover {
     border-radius: 40px 40px 0px 0px;
     margin: 0;
     display: flex;
-    background-image: linear-gradient( 0deg, rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.45)), url('/src/public/img/alpes.jpg');
+    background-image: linear-gradient( 0deg, rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.45)), url('../img/alpes.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
@@ -801,7 +801,7 @@ footer a:hover {
     border-radius: 40px 40px 0px 0px;
     margin: 0;
     display: flex;
-    background-image: linear-gradient( 0deg, rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.45)), url('/src/public/img/rio_janeiro.jpg');
+    background-image: linear-gradient( 0deg, rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.45)), url('../img/rio_janeiro.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
@@ -873,7 +873,7 @@ footer a:hover {
         border-radius: 40px 40px 0px 0px;
         margin: 0;
         display: flex;
-        background-image: linear-gradient( 0deg, rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.45)), url('/src/public/img/tierra_del_fuego.jpg');
+        background-image: linear-gradient( 0deg, rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.45)), url('../img/tierra_del_fuego.jpg');
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center center;
@@ -887,7 +887,7 @@ footer a:hover {
         border-radius: 40px 40px 0px 0px;
         margin: 0;
         display: flex;
-        background-image: linear-gradient( 0deg, rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.45)), url('/src/public/img/roma.jpg');
+        background-image: linear-gradient( 0deg, rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.45)), url('../img/roma.jpg');
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center center;
@@ -1031,7 +1031,7 @@ footer a:hover {
         border-radius: 40px 40px 0px 0px;
         margin: 0;
         display: flex;
-        background-image: linear-gradient( 0deg, rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.45)), url('/src/public/img/villa_carlos_paz.jpg');
+        background-image: linear-gradient( 0deg, rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.45)), url('../img/villa_carlos_paz.jpg');
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center center;
@@ -1041,7 +1041,7 @@ footer a:hover {
         border-radius: 40px 40px 0px 0px;
         margin: 0;
         display: flex;
-        background-image: linear-gradient( 0deg, rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.45)), url('/src/public/img/calafate.jpg');
+        background-image: linear-gradient( 0deg, rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.45)), url('../img/calafate.jpg');
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center center;
@@ -1058,7 +1058,7 @@ footer a:hover {
         border-radius: 40px 40px 0px 0px;
         margin: 0;
         display: flex;
-        background-image: linear-gradient( 0deg, rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.45)), url('/src/public/img/cancun.jpg');
+        background-image: linear-gradient( 0deg, rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.45)), url('../img/cancun.jpg');
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center center;
@@ -1068,7 +1068,7 @@ footer a:hover {
         border-radius: 40px 40px 0px 0px;
         margin: 0;
         display: flex;
-        background-image: linear-gradient( 0deg, rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.45)), url('/src/public/img/img_japon.png');
+        background-image: linear-gradient( 0deg, rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.45)), url('../img/img_japon.png');
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center center;
