--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -601,6 +601,7 @@ footer a:hover {
 .volaArg h2 {
     text-align: center;
     padding-top: 50px;
+    padding-bottom: 50px;
     color: rgb(50, 50, 50);
     font-weight: bold;
 }
